@@ -41,20 +41,18 @@ Author: Mike Hommey <glandium@debian.org>
      template<typename ValueArg, size_t inlineCapacity> struct ListHashSetNode {
 --- a/JavaScriptCore/wtf/text/AtomicString.cpp
 +++ b/JavaScriptCore/wtf/text/AtomicString.cpp
-@@ -128,9 +128,9 @@ static inline bool equal(StringImpl* str
-     if (string->length() != length)
-         return false;
+@@ -130,7 +130,7 @@ static inline bool equal(StringImpl* str
  
-+#if CPU(ARM) || CPU(SH4) || CPU(SPARC)
      // FIXME: perhaps we should have a more abstract macro that indicates when
      // going 4 bytes at a time is unsafe
 -#if CPU(ARM) || CPU(SH4)
++#if CPU(ARM) || CPU(SH4) || CPU(SPARC)
      const UChar* stringCharacters = string->characters();
      for (unsigned i = 0; i != length; ++i) {
          if (*stringCharacters++ != *characters++)
 --- a/JavaScriptCore/wtf/text/StringHash.h
 +++ b/JavaScriptCore/wtf/text/StringHash.h
-@@ -56,13 +56,13 @@ namespace WebCore {
+@@ -56,7 +56,7 @@ namespace WebCore {
  
              // FIXME: perhaps we should have a more abstract macro that indicates when
              // going 4 bytes at a time is unsafe
@@ -62,12 +60,4 @@ Author: Mike Hommey <glandium@debian.org>
 +#if CPU(ARM) || CPU(SH4) || CPU(SPARC)
              const UChar* aChars = a->characters();
              const UChar* bChars = b->characters();
--            for (unsigned i = 0; i != aLength; ++i) {
-+            for (unsigned i = 0; i != aLength; ++i)
-                 if (*aChars++ != *bChars++)
-                     return false;
--            }
-+
-             return true;
- #else
-             /* Do it 4-bytes-at-a-time on architectures where it's safe */
+             for (unsigned i = 0; i != aLength; ++i) {
