@@ -5,6 +5,7 @@ qtwebkit (2.1.0~2011week13-3) UNRELEASED; urgency=low
     - !kfreebsd-i386 !kfreebsd-amd64 !hurd-i386 -> linux-any
     - kfreebsd-i386 kfreebsd-amd64 hurd-i386 -> !linux-any
   * Add patch s390.diff from upstream to support s390x. (Closes: #637004)
+  * Patch 05_sparc_unaligned_access.diff: reduce unneeded changes.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 21 Jun 2011 12:52:21 +0200
 
